--- a/teleconnect/src/pages/para_voce/ParaVoce.css
+++ b/teleconnect/src/pages/para_voce/ParaVoce.css
@@ -14,7 +14,8 @@
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 30px;
+  margin-top: 50px;
+  margin-bottom: 20px;
   width: 100%;
 }
 
