--- a/teleconnect/src/components/popup/SubscriptionModal.css
+++ b/teleconnect/src/components/popup/SubscriptionModal.css
@@ -28,14 +28,17 @@
     right: 10px;
     border: none;
     background: transparent;
-    font-size: 24px;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
+    font-size: 35px;
+    line-height: 25px;
   }
   
-  h3 {
+  h2 {
     font-size: 1.6rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   
   p {
@@ -44,7 +47,7 @@
     margin-bottom: 15px;
   }
   
-  .wide-input {
+  input {
     width: 100%; /* Ajusta a largura dos campos para ocupar mais espaço */
     padding: 10px;
     margin: 6px 0;
@@ -53,7 +56,7 @@
     font-size: 1rem;
   }
   
-  .continue-btn {
+  .confirm-btn {
     background-color: #007bff;
     color: white;
     padding: 12px;
@@ -65,7 +68,29 @@
     width: 100%;
   }
   
-  .continue-btn:hover {
+  .confirm-btn:hover {
     background-color: #0056b3;
   }
+
+  .back-btn {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    border: none;
+    background: transparent; /* Remove fundo */
+    cursor: pointer;
+    padding: 5px; /* Garante alinhamento */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 30px;
+}
+
+.back-btn:hover {
+    background: transparent; /* Garante que não apareça fundo no hover */
+}
+
   
